* Added value distribution support to jqplotpie and jqplotbar.
* Added min parameter to jqplotbar to set the minimun value for the Y-axis.
* Added pointlabel parameter to jqplotbar and chartlegend, legendlocation,
  datalabels and datalabeltype parameters to jqplotpie based on a patches by James Hong Kong.

New formats in this version are:
* valuerank (written by DaSch)
* D3Line, D3Bar and D3Treemap (written by James Hong Kong) (requires MW 1.17 or later)

== SRF 1.6.2 ==

Released on September 18, 2011.

* Fixed error in math printer when there are no numerical results. 
* Fixed vCard compatibility with SMW 1.6 and later.
* Fixed array compatibility with SMW 1.6 and later.
* Added median and product formats to the list of default enabled formats.

== SRF 1.6.1 ==

Released on August 20, 2011.

* Fixed rendering bug in the tagcloud format occuring for inline queries.
* Fixed jqPlotBar and jqPlotPie rendering on Special:Ask and other special pages. 
* Cleaned up the jqPlotBar format somewhat.
* Dropped compatibility with SMW < 1.6 for the tagcloud format.

== SRF 1.6 ==

Released on July 30, 2011.

Changes in this version:
* Added compatibility with SMW 1.6.
* Rewrote math formats for efficiency, correct recursion and handling of multiple numerical properties.
* Cleaned up the graph format.
* Fixed division by zero issue (oh shii~) in the tagcloud format.
* Added parameter descriptions to the graph and ploticus formats. 
* Added support for SMW 1.6 style parameter handling to the tagcloud format.
* Somewhat cleaned up the BibTeX format.
* Fixed double HTML escaping issue in the tagcloud format.
* Added fileextensions parameter to the Gallery format and added missing parameter description messages.

New formats in this version are:
* product (written by Jeroen De Dauw)
* median (written by Jeroen De Dauw)

== SRF 1.5.3 ==

Released on February 9, 2011.

Changes in this version:
* Support for images specified by properties in the gallery format.