@@ -11,6 +11,7 @@ http://semantic-mediawiki.org/wiki/Semantic_Result_Formats
 * Added min parameter to jqplotbar to set the minimun value for the Y-axis.
 * Added pointlabel parameter to jqplotbar and chartlegend, legendlocation,
   datalabels and datalabeltype parameters to jqplotpie based on a patches by James Hong Kong.
+* array and hash formats compatible with 'Array' extension 2.0 and 'HashTables' 1.0 now.
 
 New formats in this version are:
 * valuerank (written by DaSch)
